[package]
name = "terra-swap-proxy"
version = "1.0.0"
authors = ["Crypto11"]
edition = "2018"
description = "A proxy to Terra-Swap"
license = "MIT"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.8" }
cosmwasm-std = { version = "1.0.0", features = ["stargate", "iterator"] }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.9.1" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
terraswap = { path = "../../packages/terraswap", default-features = false, version = "2.6.1" }


[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
